--- a/index.html
+++ b/index.html
@@ -95,9 +95,13 @@
     <div class="register-card">
         <h2 class="display-4" style="text-align: center"><u>Contact Me</u>:</h2>
         <form action="https://formspree.io/ddchon@gmail.com" method="POST">
+            <h5><b>Name:</b></h5>
             <input type="text" name="name">
+            <br>
+            <h5><b>E-mail:</b></h5>
             <input type="email" name="_replyto">
-            <input type="submit" value="Send">
+            <br>
+            <input type="submit" value="Submit">
         </form>
     </div>
     
