made changes to projects

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 
             <div class="col-4">
                 <div class="oop_challenge">
-                    <h5>OOP Challenge:</h5>
+                    <h5>OOP Challenges:</h5>
                     <br>
-                    <a href="https://github.com/ddchon/python_notebook" target="_blank">
+                    <a href="https://github.com/ddchon/Gold-Badge-Challenges.git" target="_blank">
                         <img src="https://images.pexels.com/photos/92905/pexels-photo-92905.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="project_thumbnails" alt="CSS_Creature">
                     </a>  
                 </div>
