--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="https://github.com/ddchon" target="_blank">
                     <img src=https://img.icons8.com/windows/100/000000/github.png alt="GitHub_Symbol">
                 </a> 
-                <a href="assets/Chon_resume_.pdf" target="_blank">
+                <a href="assets/Chon_resume.pdf" target="_blank">
                     <img src="https://img.icons8.com/windows/100/000000/overview-pages-2.png" alt="Resume_Symbol">
                 </a>
             </div>    
