added more projects

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <ul>
                     <li> Recent Eleven Fifty Academy Grad</li>
                     <li> Looking for a junior web developer position in the central Indiana area</li>
-                    <li> Below are projects I was able to work on individually and as a group</li>
+                    <li> Below are projects I worked on individually and as a group</li>
                     <li> Languages and Frameworks used:  Python, Django, JavaScript, Angular, React</li>
                 </ul>
             <div class="info-icons">
@@ -118,40 +118,79 @@
         </div>
     </div>
 
-    <!-- <div class="container" id="Projects">
-        <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <div class="container" id="Projects">
         <div class="row">
             <div class="col-4">
-                <div class="css_creature">
-                    <h5>CSS Creature:</h5>
+                <div class="flip-card">
+                    <a href="https://github.com/ddchon/happy_jewelry" target="_blank">
+                        <h5>Happy Jewelry Website:</h5>
+                    </a>
                     <br>
-                    <a href="https://codepen.io/ddchon/pen/oRGwoz?editors=1100" target="_blank">
-                        <img src="assets/csscreaturesnap.jpg" class="project_thumbnails" alt="CSS_Creature">
-                    </a>        
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="assets/happyjewelrysnap.jpg" class="project_thumbnails" alt="Happy_Jewelry">
+                        </div>
+                        <div class="flip-card-back">
+                            <p>
+                                Created a prototype website for my parent's actual jewelry store using Django.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <div class="col-4">
-                <div class="oop_challenge">
-                    <h5>OOP Challenges:</h5>
+                <div class="flip-card">
+                    <a href="https://github.com/ddchon/Zen-of-Python-Puzzle-" target="_blank">
+                        <h5>Zen of Python Puzzles:</h5>
+                    </a>
                     <br>
-                    <a href="https://github.com/ddchon/Gold-Badge-Challenges.git" target="_blank">
-                        <img src="https://images.pexels.com/photos/92905/pexels-photo-92905.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="project_thumbnails" alt="CSS_Creature">
-                    </a>  
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="assets/zenofpythonpuzzlessnap.jpg" class="project_thumbnails" alt="Zen_of_Python_Puzzles">
+                        </div>
+                        <div class="flip-card-back">
+                            <p>
+                                Working with a group, we created a puzzle website based on the 'Zen of Python' written by Tim Peters.  It features a variety of Python related questions to reinforce the individual's knowledge of the language.
+                            </p>
+                        </div>
+                    </div>
                 </div>
-            </div> 
-
+            </div>
+            
             <div class="col-4">
-                <div class="under_construction">
-                    <h5>Under Construction: More Coming Soon...</h5>
-                    <img src="https://images.pexels.com/photos/92905/pexels-photo-92905.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" id="under_construction_thumbnail" alt="Under_Construction">
-                </div>  
-            </div> 
+                <div class="flip-card">
+                    <a href="https://github.com/travel-buddiez/angular_final_project" target="_blank">
+                        <h5>Travel Buddiez:</h5>
+                    </a>
+                    <br>
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <img src="assets/angular_travelbuddiezsnap.jpg" class="project_thumbnails" alt="Angular_TravelBuddiez">
+                        </div>
+                        <div class="flip-card-back">
+                            <p>
+                                This is an app for travellers about suggestions on travelling as well as each respective country's traditions and norms.  In a group of four, I was tasked with working on the front-end with Angular.  This project was built as we all were learning new frameworks. 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
         </div>
-    </div> -->
+    </div>
    
 <br>
 <br>
+<br>
+
     <div class="register-card">
         <h2 class="display-4" style="text-align: center"><u>Contact Me</u>:</h2>
         <form action="https://formspree.io/ddchon@gmail.com" method="POST">
